--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.23",
-    "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.29.3",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-images-upload": "^1.2.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "typescript": "^3.7.4",
-    "typescript-fsa": "^3.0.0"
+    "typescript-fsa": "^3.0.0",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^16.9.36",
     "@types/react-helmet": "^5.0.15",
     "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0"
